added docker support with vs docker tools

--- a/NetCore-DockerSample/Dockerfile
+++ b/NetCore-DockerSample/Dockerfile
@@ -1,13 +1,12 @@
-FROM microsoft/aspnetcore AS base
+FROM microsoft/aspnetcore:2.0 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build AS build
+FROM microsoft/aspnetcore-build:2.0 AS build
 WORKDIR /src
-COPY *.sln ./
+COPY NetCore-DockerSample.sln ./
 COPY NetCore-DockerSample/NetCore-DockerSample.csproj NetCore-DockerSample/
-RUN dotnet restore
-
+RUN dotnet restore -nowarn:msb3202,nu1503
 COPY . .
 WORKDIR /src/NetCore-DockerSample
 RUN dotnet build NetCore-DockerSample.csproj -c Release -o /app
